# mypackage

./: .pre-commit-config.yaml  LICENSE.txt  mytest.py  pyproject.toml  structure.txt  test.py
.github/workflows/: ci.yml
mypackage/: __init__.py  utils.py
mypackage/geometry/: geometry.py
tests/: test_distance.py  wugga.py
