[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mypackage"
version = "0.1.1"
description = "My first package"
license = {file = "LICENSE.txt"}
authors = [{name = "empa-course"}]

[project.optional-dependencies]
dev = [
  "bumpver",
  "pytest",
  "pytest-cov",
]
docs = [
  "sphinx",
  "sphinx-rtd-theme",
]